--- a/index.html
+++ b/index.html
@@ -22,18 +22,7 @@
                     MOnday, 24 may
                 </div>
                 <div class="secondary__current-info">
-                    <div class="weather__item">
-                        <div>Humidity</div>
-                        <div>92.32%</div>
-                    </div>
-                    <div class="weather__item">
-                        <div>Pressure</div>
-                        <div>144</div>
-                    </div>
-                    <div class="weather__item">
-                        <div>Wind Speed</div>
-                        <div>154</div>
-                    </div>
+
                 </div>
             </div>
             <div class="place-container">
@@ -96,5 +85,6 @@
 
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" integrity="sha512-CryKbMe7sjSCDPl18jtJI5DR5jtkUWxPXWaLCst6QjH8wxDexfRJic2WRmRXmstr2Y8SxDDWuBO6CQC6IE4KTA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./main.js"></script>
 </html>
